# azerothcore-wotlk

./: .clang-format  .clang-tidy  .coderabbit.yml  .dockerignore  .editorconfig  .env.dist  .env.docker.dist  .git_commit_template.txt  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .suppress.cppcheck  .travis.yml  AGENTS.md  AUTHORS  Adamantite Shell.sql  BLACKROSE_GEM_PLAN.md  CHARACTER_WEB_SERVICE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Commited fully working 3v3 soloqueue.diff  DEPENDENCY_VERSIONS.md  Data.txt  Dockerfile.worldserver  FC  FINAL_MODULES_SUMMARY.md  Information  LICENSE  MODERNIZATION.md  MODULES_INSTALLED.md  NOSTRUM.md  PRODUCTION_READY_CONFIG.md  PROGRESSIVE_SYSTEMS_GUIDE.md  PreLoad.cmake  QA_PROC_SYSTEM_TEST_GUIDE.md  Quest: "A Spirit Ally?" id 9847  README  README.md  (+40 more)
modules/: .gitignore  CMakeLists.txt  LoadingModules.cmake  MODULE_CONFIGURATION_GUIDE.md  ModulesLoader.cpp.in.cmake  ModulesPCH.h  ModulesScriptLoader.h  README.md  config.cmake  config.cmake.dist  create_module.sh  how_to_make_a_module.md  updates_modules.sh
modules/DungeonRespawn/: .git_commit_template.txt  README.md
modules/PassiveAnticheat/: CMakeLists.txt  README.md
modules/RandomEnchantsModule/: CMakeLists.txt  README.md
modules/Solocraft/: CMakeLists.txt
modules/Transmog/: include.sh
modules/VASAutoBalanceModule/: CMakeLists.txt
modules/acore/: CMakeLists.txt
modules/azerothshard/: CMakeLists.txt  README.md  include.sh
modules/bot/: CMakeLists.txt  README.md
modules/custom-sql/: custom-arena-craft-db-mods.sql  down.sql
modules/dep/: .gitignore  PackageList.txt
modules/mod-Forge/: README_ES.md
modules/mod-ForgedInstance/: .gitattributes
modules/mod-LuaEngine/: CMakeLists.txt  ObjectGuid.h  README.md
modules/mod-account-achievements/: CMakeLists.txt
modules/mod-account-mounts/: CMakeLists.txt
modules/mod-ah-bot/: CMakeLists.txt  README.md  ahbot.patch  include.sh
modules/mod-anticheat/: README.md
modules/mod-arenacraft/: CMakeLists.txt  README.md  README_ES.md  README_example.md  include.sh
modules/mod-autobalance/: .gitignore  CMakeLists.txt  README.md  acore-module.json
modules/mod-betteritemreloading/: CMakeLists.txt  LICENSE  README.md
modules/mod-bg-item-reward/: LICENSE  include.sh  pull_request_template.md
modules/mod-bg-reward/: .gitignore  README.md
modules/mod-blackrose/: .git_commit_template.txt  .gitignore  README.md  acore-module.json  pull_request_template.md  setup_git_commit_template.sh
modules/mod-boss-announcer/: CMakeLists.txt
modules/mod-branding/: .gitlab-ci.yml  README.md
modules/mod-cfbg/: .gitignore  LICENSE  README.md
modules/mod-chat-censure/: .travis.yml  CMakeLists.txt  README.md
modules/mod-chat-transmitter/: README.md  mod-chat-transmitter.cmake
modules/mod-colonist/: README.md  include.sh
modules/mod-congratsonlevel/: CMakeLists.txt  README.md
modules/mod-custom-login/: README.md
modules/mod-customlogin/: CMakeLists.txt  README.md
modules/mod-customserver/: CMakeLists.txt
modules/mod-duel-reset/: .travis.yml  CMakeLists.txt  README.md  sync.ffs_db
modules/mod-duelreset/: CMakeLists.txt  README.md
modules/mod-eluna/: CMakeLists.txt  COMMUNITY_UPDATES.md  README.md  README_CN.md  README_ES.md
modules/mod-eluna-lua-engine/: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  README_ES.md
modules/mod-forgetransmog/: README.md
modules/mod-gmisland/: CMakeLists.txt  README.md
modules/mod-gmsecurity/: CMakeLists.txt  README.md
modules/mod-individual-XP/: CMakeLists.txt  README.md
modules/mod-individual-xp/: .gitattributes  .gitignore
modules/mod-ip-tracker/: README.md  include.sh
modules/mod-item-level-up/: CMakeLists.txt  README.md
modules/mod-killstreak/: CMakeLists.txt  README.md
modules/mod-learn-highest-talent/: CMakeLists.txt  README.md
modules/mod-learn-spells/: README.md
modules/mod-learn-spells_0_1/: CMakeLists.txt
modules/mod-learnspells/: README.md  include.sh
modules/mod-level-up/: CMakeLists.txt  README.md  include.sh
modules/mod-loot-box/: .gitignore  CMakeLists.txt  README.md  include.sh
modules/mod-moneyforkills/: CMakeLists.txt  README.md
modules/mod-multiclientcheck/: CMakeLists.txt  README.md
modules/mod-nostrum-bg-xp/: README.md
modules/mod-nostrum-hardcore/: README.md
modules/mod-nostrum-rates/: README.md
modules/mod-npc-services/: .travis.yml  CMakeLists.txt  README.md  cmake_install.cmake  include.sh
modules/mod-npc-talent-template/: .git_commit_template.txt  CMakeLists.txt  README.md
modules/mod-npc-talent-template-old/: README.md  include.sh
modules/mod-npcallmounts/: CMakeLists.txt  README.md
modules/mod-npcbeastmaster/: CMakeLists.txt  README.md
modules/mod-npcbuffer/: CMakeLists.txt  README.md
modules/mod-npccodebox/: CMakeLists.txt
modules/mod-npcenchanter/: CMakeLists.txt  README.md
modules/mod-npcgambler/: CMakeLists.txt
modules/mod-npcloremaster/: CMakeLists.txt  README.MD
modules/mod-phased-duels/: CMakeLists.txt  README.md
modules/mod-player-settings/: .gitignore  CMakeLists.txt  README.md  include.sh  setup_git_commit_template.sh
modules/mod-premium/: README.md  cmake_install.cmake
modules/mod-premium-master/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md
modules/mod-pvp-titles/: README.md
modules/mod-pvpscript/: CMakeLists.txt  README.md
modules/mod-pvptitles/: CMakeLists.txt
modules/mod-random-enchants/: .gitignore  CMakeLists.txt
modules/mod-randomenchants/: CMakeLists.txt  README.md
modules/mod-reserved-names/: README.md
modules/mod-reward-played-time/: README.md
modules/mod-reward-system/: .travis.yml  CMakeLists.txt  README.md
modules/mod-skeleton/: CMakeLists.txt  README.md
modules/mod-skip-dk-starting-area/: .gitattributes  README.md
modules/mod-solo-lfg/: .gitignore  CMakeLists.txt  LICENSE  README.md  pull_request_template.md
modules/mod-solo-lfg-master/: README.md
modules/mod-solocraft/: .gitignore  CMakeLists.txt  README.md  (+1 more)
src/: CMakeLists.txt  ENHANCEMENTS_COMPLETE.md  enumutils_describe.py
(+23503 files in other folders)
